--- a/style.css
+++ b/style.css
@@ -16,18 +16,17 @@ h1 {
 
 #container {
     background-color: white;
-    width: max-content;
+    width: 500px;
     margin: auto;
     padding: 0;
 }
 
 form {
     border: solid black 1px;
-    width: max-content;
     margin: auto;
 }
 
-input {
+input[type="text"] {
     height: 50px;
     width: 400px;
     text-align: left;
@@ -47,20 +46,21 @@ ul {
 }
 
 .lineDiv{
-    display: inline-block;
 }
 
 input[type=checkbox] {
-    float: left;
+    height: 20px;
+    width: 20px;
 }
 
 li {
+    display: block;
+    position: relative;
     font-size: 30px;
     border: solid black 1px;
     text-align: left;
     justify-content: left;
     padding: 15px;
-    margin-left: 25px;
     list-style-type: none;
 }
 
