--- a/style.css
+++ b/style.css
@@ -16,14 +16,23 @@ h1 {
 
 #container {
     background-color: white;
-    width: 500px;
+    width: max-content;
     margin: auto;
     padding: 0;
 }
 
 form {
-    border: solid black 1px;
+    border: solid gray 1px;
     margin: auto;
+}
+
+#markAll {
+    font-size: 25px;
+    background: none;
+    opacity: 70%;
+    border: none;
+    margin: 0 20;
+    padding-left: 10px;
 }
 
 input[type="text"] {
@@ -31,6 +40,8 @@ input[type="text"] {
     width: 400px;
     text-align: left;
     font-size: 30px;
+    border: none;
+    padding-left: 10px;
 }
 
 ::placeholder {
@@ -45,23 +56,43 @@ ul {
     margin: 0;
 }
 
-.lineDiv{
+li {
+    font-size: 30px;
+    border: solid gray 1px;
+    text-align: left;
+    justify-content: left;
+    padding: 10px 0px;
+    list-style-type: none;
 }
 
 input[type=checkbox] {
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
+    margin-right: 25px;
+    margin-left: 12px;
+    border-radius: 100%;
 }
 
-li {
-    display: block;
-    position: relative;
-    font-size: 30px;
-    border: solid black 1px;
-    text-align: left;
-    justify-content: left;
-    padding: 15px;
-    list-style-type: none;
+
+
+#delete {
+    visibility: hidden;
+    opacity: 50%;
+    float: right;
+    font-size: 25px;
+    background: none;
+    border: none;
+    margin: 0 20;
+    padding-left: 10px;
+}
+
+
+.lineDiv:hover #delete {
+    visibility: visible;
+}
+
+#delete:hover {
+    opacity: 100%;
 }
 
 .categoryBtn {
