--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1 {
 
 #container {
     background-color: white;
-    width: max-content;
+    width: 465px;
     margin: auto;
     padding: 0;
 }
@@ -56,7 +56,11 @@ ul {
     margin: 0;
 }
 
+.lineDiv {
+}
+
 li {
+    display: block;
     font-size: 30px;
     border: solid gray 1px;
     text-align: left;
@@ -97,4 +101,25 @@ input[type=checkbox] {
 
 .categoryBtn {
     display: none;
+}
+
+@media (max-width: 570px) {
+    
+    #container {
+        width: 75%;
+    }
+
+    input[type="text"] {
+        font-size: 20px;
+        width: 75%;
+    }
+
+    ::placeholder {
+        font-size: 20px;
+    }
+
+    li {
+        font-size: 20px;
+        
+    }
 }
