--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1 {
 
 #container {
     background-color: white;
-    width: 465px;
+    width: 470px;
     margin: auto;
     padding: 0;
 }
@@ -57,6 +57,7 @@ ul {
 }
 
 .lineDiv {
+    word-wrap: break-word;
 }
 
 li {
@@ -73,7 +74,7 @@ input[type=checkbox] {
     height: 30px;
     width: 30px;
     margin-right: 25px;
-    margin-left: 12px;
+    margin-left: 13px;
     border-radius: 100%;
 }
 
