--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ input[type=checkbox] {
 
 
 
-#delete {
+.delete {
     visibility: hidden;
     opacity: 50%;
     float: right;
@@ -92,7 +92,7 @@ input[type=checkbox] {
 }
 
 
-.lineDiv:hover #delete {
+.lineDiv:hover .delete {
     visibility: visible;
 }
 
