--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ li {
     border: solid gray 1px;
     text-align: left;
     justify-content: left;
-    padding: 10px 0px;
+    padding: 15px 15px 15px 60px;
     list-style-type: none;
 }
 
@@ -75,7 +75,9 @@ input[type=checkbox] {
     width: 30px;
     margin-right: 25px;
     margin-left: 13px;
-    border-radius: 100%;
+    position: absolute;
+    left: 750px;
+    margin: auto;
 }
 
 
