--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h1 {
     border: solid gray 1px;
     margin: auto;
     padding: 0;
+    border: solid gray 1px;
 }
 
 form {
@@ -67,18 +68,15 @@ li {
     border-bottom: solid gray 1px;
     text-align: left;
     justify-content: left;
-    padding: 15px 15px 15px 60px;
+    padding: 15px 0px;
     list-style-type: none;
 }
 
 input[type=checkbox] {
     height: 30px;
     width: 30px;
-    margin-right: 25px;
+    display: inline;
     margin-left: 13px;
-    position: absolute;
-    left: 750px;
-    margin: auto;
 }
 
 
@@ -105,6 +103,14 @@ li:hover .delete {
 
 .categoryBtn {
     display: none;
+}
+
+footer {
+    font-size: 11px;
+    color: gray;
+    opacity: 80%;
+    margin-top: 40px;
+    line-height: 1.6;
 }
 
 @media (max-width: 570px) {
