--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ h1 {
     border: solid gray 1px;
     margin: auto;
     padding: 0;
-    border: solid gray 1px;
 }
 
 form {
@@ -35,6 +34,7 @@ form {
     border: none;
     margin: 0 20;
     padding-left: 10px;
+    /* visibility: hidden; */
 }
 
 input[type="text"] {
@@ -56,40 +56,41 @@ input[type="text"] {
 ul {
     padding: 0;
     margin: 0;
-}
-
-.lineDiv {
-    word-wrap: break-word;
+    word-break: break-all;
 }
 
 li {
-    display: block;
-    font-size: 30px;
+    display: flex;
     border-bottom: solid gray 1px;
-    text-align: left;
-    justify-content: left;
     padding: 15px 0px;
     list-style-type: none;
 }
 
 input[type=checkbox] {
+    /* text-align: center; */
+    float: left;
+    /* position: absolute; */
     height: 30px;
     width: 30px;
-    display: inline;
     margin-left: 13px;
 }
 
-
+.note {
+    font-size: 30px;
+    text-indent: 20px;
+    overflow:hidden;
+}
 
 .delete {
+    position: absolute;
     visibility: hidden;
     opacity: 50%;
-    float: right;
     font-size: 25px;
     background: none;
     border: none;
     margin: 0 20;
     padding-left: 10px;
+    
 }
 
 
@@ -103,6 +104,15 @@ li:hover .delete {
 
 .categoryBtn {
     display: none;
+    border: none;
+    background: transparent;
+    margin: 8px 2px;
+    text-align: center;
+}
+
+.categoryBtn:hover {
+    border: solid rgb(201, 159, 166) 1px;
+    cursor: pointer;
 }
 
 footer {
