--- a/style.css
+++ b/style.css
@@ -67,28 +67,26 @@ li {
 }
 
 input[type=checkbox] {
-    float: left;
     min-height: 30px;
     min-width: 30px;
-    margin-left: 13px;
+    margin-left: 3%;
 }
 
 .note {
-    margin-left: 3%;
     text-align: left;
     font-size: 30px;
+    width: 380px;
+    justify-content: center;
+    margin-left: 2%;
     word-break: break-all;
 }
 
 .delete {
-    position: absolute;
-    right: 3%;
-    top: 50%;
-    /* bottom: 10%; */
-    /* margin-top: auto; */
     visibility: hidden;
     opacity: 50%;
     font-size: 25px;
+    margin: auto 0;
+    margin-right: 1%;
     background: none;
     border: none;
 }
