--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ form {
     border: none;
     margin: 0 20;
     padding-left: 10px;
-    /* visibility: hidden; */
+    visibility: hidden;
 }
 
 input[type="text"] {
@@ -114,12 +114,12 @@ li:hover .delete {
 }
 
 #clear {
-    /* display: none;
+    display: none;
     border: none;
     text-decoration: underline;
     background: transparent;
     margin: 8px 2px;
-    text-align: right; */
+    text-align: right; 
 }
 
 #clear:hover {
