--- a/style.css
+++ b/style.css
@@ -32,8 +32,6 @@ form {
     background: none;
     opacity: 70%;
     border: none;
-    margin: 0 20;
-    padding-left: 10px;
     visibility: hidden;
 }
 
@@ -100,12 +98,23 @@ li:hover .delete {
     opacity: 100%;
 }
 
+#output {
+    display: none;
+    float: left;
+    font-size: 13px;
+    text-align: left;
+    margin-left: 10px;
+    margin-top: 8px;
+}
+
 .categoryBtn {
     display: none;
     border: none;
     background: transparent;
     margin: 8px 2px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .categoryBtn:hover {
@@ -113,15 +122,15 @@ li:hover .delete {
     cursor: pointer;
 }
 
-
-
 #clear {
     display: none;
+    float: right;
     border: none;
     text-decoration: underline;
     background: transparent;
-    margin: 8px 2px;
-    text-align: right; 
+    margin-right: 10px;
+    margin-top: 8px;
+    text-align: right;
 }
 
 #clear:hover {
@@ -144,7 +153,7 @@ footer {
 
     input[type="text"] {
         font-size: 20px;
-        width: 75%;
+        width: 80%;
     }
 
     ::placeholder {
