--- a/style.css
+++ b/style.css
@@ -1,30 +1,32 @@
 * {
-    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
-    background-color: rgb(243, 243, 243);
+    background: #f5f5f5;
 }
 
 h1 {
-    font-size: 80px;
-    font-weight: lighter;
-    color: rgb(201, 147, 156);
-    opacity: 50%;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    text-align: center;
+    font-size: 100px;
+    font-weight: 100;
+    color: rgba(175, 47, 47, 0.15);
 }
 
 #container {
     background-color: white;
-    width: 470px;
-    border: solid gray 1px;
+    /* width: 470px; */
+    width: 550px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+    border: solid rgb(219, 218, 218) 1px;
     margin: auto;
-    padding: 0;
 }
 
 form {
-    border-bottom: solid gray 1px;
-    margin: auto;
+    border-bottom: solid rgb(219, 218, 218) 1px;
+    text-align: left;
 }
 
 #markAll {
@@ -33,20 +35,21 @@ form {
     opacity: 70%;
     border: none;
     visibility: hidden;
+    padding-left: 2.6%;
 }
 
 input[type="text"] {
     height: 50px;
-    width: 400px;
+    width: 470px;
     text-align: left;
-    font-size: 30px;
+    font-size: 24px;
     border: none;
     padding-left: 10px;
     outline: none;
 }
 
 ::placeholder {
-    font-size: 30px;
+    font-size: 24px;
     font-style: italic;
     color: gray;
     opacity: 20%;
@@ -60,8 +63,8 @@ ul {
 li {
     position: relative;
     display: flex;
-    border-bottom: solid gray 1px;
-    padding: 15px 0px;
+    border-bottom: solid rgb(219, 218, 218) 1px;
+    padding: 12px 0px;
     list-style-type: none;
 }
 
@@ -73,9 +76,9 @@ input[type=checkbox] {
 
 .note {
     text-align: left;
-    font-size: 30px;
-    width: 380px;
-    justify-content: center;
+    font-size: 24px;
+    width: 440px;
+    margin-top: 1%;
     margin-left: 2%;
     word-break: break-all;
 }
@@ -83,9 +86,8 @@ input[type=checkbox] {
 .delete {
     visibility: hidden;
     opacity: 50%;
-    font-size: 25px;
+    font-size: 14px;
     margin: auto 0;
-    margin-right: 1%;
     background: none;
     border: none;
 }
@@ -102,32 +104,35 @@ li:hover .delete {
 #output {
     display: none;
     float: left;
-    font-size: 13px;
+    font-size: 14px;
     text-align: left;
     margin-left: 10px;
     margin-top: 8px;
+    margin-right: 8%;
 }
 
 .categoryBtn {
     display: none;
+    font-size: 14px;
     border: none;
     background: transparent;
     margin: 8px 2px;
+}
+
+#filterBtn {
     text-align: center;
-    justify-content: center;
-    align-items: center;
 }
 
 .categoryBtn:hover {
-    border: solid rgb(201, 159, 166) 1px;
+    outline: 1px solid rgb(201, 159, 166);
     cursor: pointer;
 }
 
 #clear {
-    display: none;
+    visibility: hidden;
+    font-size: 14px;
     float: right;
     border: none;
-    text-decoration: underline;
     background: transparent;
     margin-right: 10px;
     margin-top: 8px;
@@ -136,13 +141,15 @@ li:hover .delete {
 
 #clear:hover {
     cursor: pointer;
+    text-decoration: underline;
 }
 
 footer {
-    font-size: 11px;
+    text-align: center;
+    font-size: 10px;
     color: gray;
     opacity: 80%;
-    margin-top: 40px;
+    margin-top: 65px;
     line-height: 1.6;
 }
 
@@ -152,17 +159,33 @@ footer {
         width: 75%;
     }
 
+    #markAll {
+        text-align: left;
+        padding-right: 4%;
+    }
+
     input[type="text"] {
         font-size: 20px;
-        width: 80%;
+        width: 70%;
+    }
+
+    .note {
+        font-size: 20px;
+        margin: auto;
+        padding-left: 1%;
     }
 
     ::placeholder {
-        font-size: 20px;
+        font-size: 16px;
     }
 
     li {
         font-size: 20px;
         
     }
+
+    #output, .categoryBtn, #clear {
+        font-size: 8px;
+    }
+
 }
