--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ footer {
         padding-left: 1%;
     }
 
+    .delete {
+        margin-right: 1%;
+    }
+
     ::placeholder {
         font-size: 16px;
     }
